StreamFlix/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamflix-deployment
  labels:
    app: streamflix
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
    app: streamflix
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: streamflix
    spec:
    containers:
    - name:: streamflixc
      image: streamflix:latest
      ports:
      -  containerPort: 80
