StreamFlix/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamflix-clusterip-service
  labels:
    app: streamflix
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: streamflix
  ports:
  - port: 80
    targetPort: 80
